[tool.poetry]
name = "lab11"
version = "0.1.0"
description = ""
authors = ["damianhealthup <damian@healthup.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8,<=3.10"
numpy = "1.24.0"
pandas = "^1.5.3"
ipykernel = "^6.21.1"
bokeh = "^3.0.3"
matplotlib = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
